--- a/1.html
+++ b/1.html
@@ -27,16 +27,10 @@
 <div id="container" class="hfeed">
 	<div id="page" class="blog">
 		<div id="header">
-						<h1 id="site-title">
-				<span>
-					<a href="/" title="Каталог заметок, новостных лент и публикаций
-" rel="home">Каталог заметок, новостных лент и публикаций
-</a>
-				</span>
-			</h1>
+
 
 			<div id="nav" role="navigation">
-			  				<div class="skip-link screen-reader-text"><a href="#content" title="Перейти к содержанию">К содержанию</a></div>
+			  				
 								<div class="menu"><ul><li class="page_item"><a href="/" title="Главная">Главная</a></li><li class="page_item page-item-95"><a href="articles.html">Публикации
 </a></li><li class="page_item page-item-6"><a href="contacts.html">Связаться с нами
 </a></li></ul></div>
@@ -104,7 +98,7 @@
 		
 
 					<div id="site-info">
-						Copyright (c) 2018, Каталог заметок, новостных лент и публикаций
+						Copyright (c) 2018
 <!-- Код в футере -->
                                         </div><!-- #site-info -->
 
