--- a/index.html
+++ b/index.html
@@ -78,13 +78,169 @@
 
 <!--ajhooyte--><!--/ajhooyte-->
 <br><br>Последние статьи:<br><a href="1.html">Как отремонтировать утюг</a><br><a href="2.html">Как починить душ</a><br><a href="3.html">Ремонт офисного стула собственными силами</a><br><a href="4.html">Как самому отремонтировать дверную ручку</a><br><a href="5.html">О том, как отремонтировать утюг</a><br><a href="6.html">Вышел из строя дизель?</a><br><a href="7.html">Ремонт спининга</a><br><a href="8.html">Ремонт ручки своими руками</a><br><a href="9.html">Как починить старый диван</a><br><a href="10.html">Вышел из строя внешний жесткий диск? Ремонтируем самостоятельно</a>
-<br><br><a href="/articles.html">1</a>
-<a href="articles2.html">2</a>
-<a href="articles3.html">3</a>
-<a href="articles4.html">4</a>
-<a href="articles5.html">5</a>
-<a href="articles6.html">6</a>
-<a href="articles7.html">7</a>
+
+
+<br><br><a href="81.html">Как выполнить починку карты памяти</a>
+<br><a href="82.html">Как отремонтировать лазерную мышь</a>
+<br><a href="83.html">Вышел из строя стол?</a>
+<br><a href="84.html">Как самостоятельно починить кофеварку</a>
+<br><a href="85.html">Вышел из строя душ?</a>
+<br><a href="86.html">Как починить дизель</a>
+<br><a href="87.html">Поломалась печка?</a>
+<br><a href="88.html">Вышел из строя шланг? Решаем этот вопрос</a>
+<br><a href="89.html">Ремонт лампы</a>
+<br><a href="90.html">Ремонт динамика на телефоне</a>
+<br><a href="91.html">Ремонт акриловой ванны своими руками</a>
+<br><a href="92.html">Как починить бочку</a>
+<br><a href="93.html">О том, как своими руками починить аккордеон</a>
+<br><a href="94.html">Вышел из строя бензогенератор?</a>
+<br><a href="95.html">Ремонт мыши собственными руками</a>
+<br><a href="96.html">Вышла из строя шиферная крыша? Решаем эту проблему самостоятельно</a>
+<br><a href="97.html">Как выполнить починку каблука</a>
+<br><a href="98.html">Поломался навигатор? Решаем эту проблему самостоятельно</a>
+<br><a href="99.html">Вышло из строя кресло?</a>
+<br><a href="100.html">Вышла из строя свч печь?</a>
+<br><a href="101.html">Ремонт кузова автомобиля собственными руками</a>
+<br><a href="102.html">Ремонт микроволновки</a>
+<br><a href="103.html">Как выполнить ремонт стартера</a>
+<br><a href="104.html">Как выполнить починку айфона</a>
+<br><a href="105.html">Поломался аккумулятор шуруповерта? Решаем эту проблему своими руками</a>
+<br><a href="106.html">Вышла из строя сумка? Решаем эту проблему собственными руками</a>
+<br><a href="107.html">Как выполнить починку тахометра</a>
+<br><a href="108.html">Как починить газ контроль</a>
+<br><a href="109.html">Как самому отремонтировать zippo</a>
+<br><a href="110.html">Ремонт электронных часов своими силами</a>
+<br><a href="111.html">Ремонт кузова</a>
+<br><a href="112.html">Как своими силами починить паркетный пол</a>
+<br><a href="113.html">Поломалась клавиша на ноутбуке?</a>
+<br><a href="114.html">Поломался стеклопакет?</a>
+<br><a href="115.html">Как сделать починку флэшки</a>
+<br><a href="116.html">Ремонт матраса</a>
+<br><a href="117.html">Поломался унитаз?</a>
+<br><a href="118.html">Вышли из строя наушники?</a>
+<br><a href="119.html">Как своими силами отремонтировать удилище</a>
+<br><a href="120.html">О том, как самостоятельно отремонтировать водопроводный кран</a>
+<br><a href="121.html">О том, как починить zippo</a>
+<br><a href="122.html">К вопросу о том, как самому починить двигатель</a>
+<br><a href="123.html">Ремонт душевого поддона своими руками</a>
+<br><a href="124.html">Несколько слов о том, как собственными силами починить доводчик</a>
+<br><a href="125.html">Как сделать починку акпп</a>
+<br><a href="126.html">О том, как починить розетку</a>
+<br><a href="127.html">Поломался аккумулятор?</a>
+<br><a href="128.html">Вышла из строя кпп?</a>
+<br><a href="129.html">Поломался гидрокостюм? Решаем этот вопрос</a>
+<br><a href="130.html">Как отремонтировать сапоги</a>
+<br><a href="131.html">Как самому отремонтировать амортизатор ваз</a>
+<br><a href="132.html">Как отремонтировать mp3</a>
+<br><a href="133.html">Как самому отремонтировать радиотелефон</a>
+<br><a href="134.html">Вышла из строя деревянная дверь?</a>
+<br><a href="135.html">Ремонт трансформатора собственными силами</a>
+<br><a href="136.html">Вышел из строя обогрев стекла? Решаем этот вопрос</a>
+<br><a href="137.html">Ремонт напольных весов своими руками</a>
+<br><a href="138.html">Как отремонтировать электроплиту</a>
+<br><a href="139.html">Ремонт цепочки своими силами</a>
+<br><a href="140.html">Вышел из строя картридж? Решаем эту проблему</a>
+<br><a href="141.html">О том, как починить душ</a>
+<br><a href="142.html">Как отремонтировать шуруповерт</a>
+<br><a href="143.html">Ремонт однорычажного смесителя</a>
+<br><a href="144.html">Ремонт шланга высокого давления</a>
+<br><a href="145.html">Вышла из строя дорога?</a>
+<br><a href="146.html">Поломался пластиковый подоконник? Ремонтируем самостоятельно</a>
+<br><a href="147.html">Как отремонтировать стул</a>
+<br><a href="148.html">Как починить автомагнитолу</a>
+<br><a href="149.html">Вышел из строя стартер?</a>
+<br><a href="150.html">Вышел из строя велосипед?</a>
+<br><a href="151.html">Ремонт шланга высокого давления собственными силами</a>
+<br><a href="152.html">Пару слов о том, как своими силами починить звуковую карту</a>
+<br><a href="153.html">Как починить шрус</a>
+<br><a href="154.html">О том, как самостоятельно отремонтировать тнвд</a>
+<br><a href="155.html">Поломался процессор?</a>
+<br><a href="156.html">Вышел из строя каблук? Решаем этот вопрос самостоятельно</a>
+<br><a href="157.html">Как самостоятельно отремонтировать кресло</a>
+<br><a href="158.html">Вышел из строя атомайзер? Решаем эту проблему самостоятельно</a>
+<br><a href="159.html">Вышел из строя газлифт? Решаем этот вопрос</a>
+<br><a href="160.html">Ремонт ибп собственными руками</a>
+<a href="321.html">Как починить бампер</a>
+<br><a href="322.html">Как отремонтировать кафель</a>
+<br><a href="323.html">Вышла из строя абс? Чиним самостоятельно</a>
+<br><a href="324.html">Как своими силами отремонтировать вентилятор</a>
+<br><a href="325.html">Пару слов о том, как починить швейную машинку</a>
+<br><a href="326.html">Как починить межкомнатную дверь</a>
+<br><a href="327.html">Как своими руками починить ps2</a>
+<br><a href="328.html">Как отремонтировать телефон</a>
+<br><a href="329.html">Вышел из строя амортизатор? Чиним самостоятельно</a>
+<br><a href="330.html">О том, как починить вал</a>
+<br><a href="331.html">Поломался сапог? Решаем эту проблему</a>
+<br><a href="332.html">Как отремонтировать старый стул</a>
+<br><a href="333.html">Поломалась электродрель?</a>
+<br><a href="334.html">Ремонт кухонного гарнитура</a>
+<br><a href="335.html">Ремонт деревенского дома своими руками</a>
+<br><a href="336.html">Поломалась крыша гаража?</a>
+<br><a href="337.html">Несколько слов о том, как самому починить баню</a>
+<br><a href="338.html">Поломалась насосная станция?</a>
+<br><a href="339.html">Ремонт компа собственными силами</a>
+<br><a href="340.html">Вышла из строя труба? Решаем эту проблему</a>
+<br><a href="341.html">Вышла из строя стяжка? Чиним самостоятельно</a>
+<br><a href="342.html">Поломалась разошедшаяся молния?</a>
+<br><a href="343.html">Как выполнить починку привода</a>
+<br><a href="344.html">Как отремонтировать коридор</a>
+<br><a href="345.html">Поломалась зарядка?</a>
+<br><a href="346.html">Ремонт книги собственными силами</a>
+<br><a href="347.html">Вышел из строя cs? Чиним самостоятельно</a>
+<br><a href="348.html">Ремонт руля своими силами</a>
+<br><a href="349.html">Вышел из строя водонагреватель? Решаем этот вопрос</a>
+<br><a href="350.html">Вышел из строя зонт автомат? Ремонтируем самостоятельно</a>
+<br><a href="351.html">Как отремонтировать автомагнитолу</a>
+<br><a href="352.html">Поломалась дверь?</a>
+<br><a href="353.html">Пару слов о том, как починить беспроводную мышь</a>
+<br><a href="354.html">Поломался стартер? Чиним самостоятельно</a>
+<br><a href="355.html">Как выполнить ремонт деревянного пола</a>
+<br><a href="356.html">Как починить фундамент</a>
+<br><a href="357.html">Ремонт сноуборда собственными руками</a>
+<br><a href="358.html">Ремонт провода собственными силами</a>
+<br><a href="359.html">Как отремонтировать cd</a>
+<br><a href="360.html">Вышел из строя сливной бачок унитаза?</a>
+<br><a href="361.html">Как отремонтировать принтер hp</a>
+<br><a href="362.html">Пару слов о том, как отремонтировать реестр</a>
+<br><a href="363.html">Ремонт вентиля</a>
+<br><a href="364.html">Ремонт автосигнализации</a>
+<br><a href="365.html">Как починить пол в доме</a>
+<br><a href="366.html">О том, как самостоятельно починить zippo</a>
+<br><a href="367.html">Как выполнить ремонт автомобиля</a>
+<br><a href="368.html">Как отремонтировать цепочку</a>
+<br><a href="369.html">Ремонт mp3</a>
+<br><a href="370.html">Ремонт слайдера собственными руками</a>
+<br><a href="371.html">Как самостоятельно отремонтировать кран на кухне</a>
+<br><a href="372.html">Вышел из строя ресивер? Ремонтируем самостоятельно</a>
+<br><a href="373.html">Ремонт сенсора на телефоне</a>
+<br><a href="374.html">Поломалась трещина на стекле?</a>
+<br><a href="375.html">Как сделать починку старой ванны</a>
+<br><a href="376.html">Как починить тахометр на тойоте</a>
+<br><a href="377.html">Ремонт офисного кресла</a>
+<br><a href="378.html">Ремонт шарового смесителя</a>
+<br><a href="379.html">Как починить саманный дом</a>
+<br><a href="380.html">Ремонт акриловой ванны</a>
+<br><a href="381.html">Как починить шаровой смеситель</a>
+<br><a href="382.html">Как отремонтировать вакуумный усилитель</a>
+<br><a href="383.html">Как отремонтировать хлебопечку</a>
+<br><a href="384.html">Как выполнить ремонт домашнего телефона</a>
+<br><a href="385.html">Как отремонтировать домашний телефон</a>
+<br><a href="386.html">О том, как самому починить швейную машинку</a>
+<br><a href="387.html">Ремонт вспышки</a>
+<br><a href="388.html">Вышла из строя газовая плита дарина? Решаем этот вопрос</a>
+<br><a href="389.html">Ремонт спиннинга</a>
+<br><a href="390.html">Ремонт собачки</a>
+<br><a href="391.html">Как починить пуговицу</a>
+<br><a href="392.html">Поломался зонт автомат?</a>
+<br><a href="393.html">Как отремонтировать зонт автомат</a>
+<br><a href="394.html">Как починить принтер hp</a>
+<br><a href="395.html">Ремонт коридора</a>
+<br><a href="396.html">Ремонт аккумулятора собственными силами</a>
+<br><a href="397.html">Вышел из строя складной зонт? Ремонтируем самостоятельно</a>
+<br><a href="398.html">Несколько слов о том, как собственными силами починить звук на компьютере</a>
+<br><a href="399.html">Как отремонтировать фасад</a>
+<br><a href="400.html">Ремонт протертых джинсов</a>
+
 <!-- Код после текста --></p>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
