--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <link rel="stylesheet" type="text/css" media="all" href="h/style.css">
 
 
+<meta name="google-site-verification" content="_7_Uo3yBUwR1RNZNCiYomdhD8s7EsBKdUxwK59AxmGQ" />
 
-
-                <link rel="canonical" href="https://bonoraly.github.io/index.html">
+                <link rel="canonical" href="https://bonoraly.github.io/">
 <script type="text/javascript" src="h/comment-reply.js"></script>
 
  
@@ -77,8 +77,7 @@
 <br>Надеемся, что на страницах нашего сайта вы найдете для себя что-то познавательное и в перспективе станете постоянным пользователем нашего портала.
 
 <!--ajhooyte--><!--/ajhooyte-->
-<br><br>Последние статьи:<br><a href="1.html">Как отремонтировать утюг</a><br><a href="2.html">Как починить душ</a><br><a href="3.html">Ремонт офисного стула собственными силами</a><br><a href="4.html">Как самому отремонтировать дверную ручку</a><br><a href="5.html">О том, как отремонтировать утюг</a><br><a href="6.html">Вышел из строя дизель?</a><br><a href="7.html">Ремонт спининга</a><br><a href="8.html">Ремонт ручки своими руками</a><br><a href="9.html">Как починить старый диван</a><br><a href="10.html">Вышел из строя внешний жесткий диск? Ремонтируем самостоятельно</a>
-
+<br><br>Последние статьи:
 
 <br><br><a href="81.html">Как выполнить починку карты памяти</a>
 <br><a href="82.html">Как отремонтировать лазерную мышь</a>
