--- a/index.html
+++ b/index.html
@@ -240,6 +240,14 @@
 <br><a href="399.html">Как отремонтировать фасад</a>
 <br><a href="400.html">Ремонт протертых джинсов</a>
 
+<br><br><a href="/articles.html">1</a>
+<a href="/articles2.html">2</a>
+<a href="/articles3.html">3</a>
+<a href="/articles4.html">4</a>
+<a href="/articles5.html">5</a>
+<a href="/articles6.html">6</a>
+<a href="/articles7.html">7</a>
+
 <!-- Код после текста --></p>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
