--- a/1.html
+++ b/1.html
@@ -31,8 +31,8 @@
 
 			<div id="nav" role="navigation">
 			  				
-								<div class="menu"><ul><li class="page_item"><a href="/" title="Главная">Главная</a></li><li class="page_item page-item-95"><a href="/articles.html">Публикации
-</a></li><li class="page_item page-item-6"><a href="/contacts.html">Связаться с нами
+								<div class="menu"><ul><li class="page_item"><a href="/" title="Главная" rel ="nofollow">Главная</a></li><li class="page_item page-item-95"><a href="/articles.html" rel ="nofollow">Публикации
+</a></li><li class="page_item page-item-6"><a href="/contacts.html" rel ="nofollow">Связаться с нами
 </a></li></ul></div>
 			</div><!-- #nav -->
 
