--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <html dir="ltr" lang="ru-RU"><!--<![endif]--><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 
-<title>Каталог заметок, новостных лент и публикаций
-</title>
+<title>Полезные статьи по ремонту техники</title>
+
 <meta name="keywords" content="">
 <meta name="Description" content="">
 <link rel="profile" href="http://gmpg.org/xfn/11">
@@ -61,25 +61,13 @@
 						<p><!-- Код перед текстом --><img src="img.jpg" border="1" style="float: right; margin: 4px 0 4px 12px;">Рады представить наш каталог статей. Здесь вы имеете возможность прочесть наиболее интересные обзоры и анонсы.
 <br>У нас собраны статьи на разнообразные темы. Абсолютно любой пользователь интернета здесь обязательно сможет найти для себя что-то познавательное и новое.
 <br>На страницах этого сайта представлены важные новости таких городов, как Набережные Челны, Жуковский, Новгород, Южно-Сахалинск, Иркутск, Сергиев Посад, Копейск и Ульяновск.
-<br>Все без исключения публикуемые на нашем сайте статьи проходят строгую модерацию. Модератор имеет право отказать вам в публикации в случае, если размещаемая статья:
-<br>&nbsp;&nbsp;&nbsp;написана не на русском языке;
-<br>&nbsp;&nbsp;&nbsp;нуждается в обработке;
-<br>&nbsp;&nbsp;&nbsp;неэтична;
-<br>&nbsp;&nbsp;&nbsp;излишне переполнена рекламой;
-<br>&nbsp;&nbsp;&nbsp;имеет размер менее 1500 символов не включая пробелы и знаки препинания;
-<br>&nbsp;&nbsp;&nbsp;содержит информацию оскорбительного характера;
-<br>&nbsp;&nbsp;&nbsp;является бредовым набором слов;
-<br>&nbsp;&nbsp;&nbsp;противоречит законам России или Украины;
-<br>&nbsp;&nbsp;&nbsp;имеет слишком явный рекламный характер;
-<br>&nbsp;&nbsp;&nbsp;лишена смысла;
-<br>&nbsp;&nbsp;&nbsp;содержит материалы "для взрослых";
-<br>&nbsp;&nbsp;&nbsp;сгенерирована компьютерной программой;
-<br>Надеемся, что на страницах нашего сайта вы найдете для себя что-то познавательное и в перспективе станете постоянным пользователем нашего портала.
+<br>Все без исключения публикуемые на нашем сайте статьи проходят строгую модерацию. 
+<br>Надеемся, что на страницах нашего <a href="https://github.com/bonoraly/bonoraly.github.io">сайта</a> вы найдете для себя что-то познавательное и в перспективе станете постоянным пользователем нашего портала.
 
 <!--ajhooyte--><!--/ajhooyte-->
 <br><br>Последние статьи:
 
-<br><br><a href="81.html">Как выполнить починку карты памяти</a>
+<br><a href="81.html">Как выполнить починку карты памяти</a>
 <br><a href="82.html">Как отремонтировать лазерную мышь</a>
 <br><a href="83.html">Вышел из строя стол?</a>
 <br><a href="84.html">Как самостоятельно починить кофеварку</a>
