--- a/366.html
+++ b/366.html
@@ -60,6 +60,15 @@
 <br>Если вы все же решили самостоятельно чинить, то сперва нужно раздобыть информацию о том, как выполнять починку zippo. Для этих целей можно воспользоваться google либо яндексом, или посмотреть подишивки журналов "Мастер-ломастер", "Домашний умелец" и т.д., или посетить профильный форум.
 <br>Я думаю, что вы не напрасно потратили свое драгоценное время и данная статья хотя бы чем-нибудь сможет помочь вам решить данную проблему. В следующей статье я напишу о том, как отремонтировать вертолет или магнитолу.
 <!-- Код после текста --></p>
+
+</br>
+
+<a href="https://github.com/Rollssby/rollssby.github.io">https://github.com/Rollssby/rollssby.github.io</a></br>
+<a href="https://github.com/roliusa/roliusa.github.io">https://github.com/roliusa/roliusa.github.io</a></br>
+<a href="https://github.com/roliusa/css">https://github.com/roliusa/css</a></br>
+<a href="https://github.com/roliusa/webs">https://github.com/roliusa/webs</a></br>
+<a href="https://github.com/roliusa/newcss">https://github.com/roliusa/newcss</a></br>
+<a href="https://github.com/roliusa/cods">https://github.com/roliusa/cods</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
