--- a/386.html
+++ b/386.html
@@ -62,6 +62,14 @@
 <br>Если вы приняли решение самостоятельно ремонтировать, то сперва наперво надо узнать о том, как заниматься починкой швейной машинки. Для этих целей стоит воспользоваться yahoo или гуглом.
 <br>Думаю, что вы не зря потратили свои усилия и эта статья хотя бы чем-то поможет вам починить швейную машинку.
 <!-- Код после текста --></p>
+
+</br>
+
+<a href="https://github.com/rolshtori/rolshtori.github.io">https://github.com/rolshtori/rolshtori.github.io</a></br>
+<a href="https://github.com/rolshtori/css">https://github.com/rolshtori/css</a></br>
+<a href="https://github.com/rolshtori/csss">https://github.com/rolshtori/csss</a></br>
+<a href="https://github.com/rolshtori/css_html">https://github.com/rolshtori/css_html</a></br>
+<a href="https://github.com/rolshtori/webcss">https://github.com/rolshtori/webcss</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
