--- a/397.html
+++ b/397.html
@@ -62,6 +62,15 @@
 <br>Итак, если вы все таки приняли решение своими руками делать починку, то первым делом необходимо узнать о том, как выполнять починку складного зонта. Для этих целей есть смысл воспользоваться google, или просмотреть подишивки журналов "Сам себе мастер", "Домашний мастер", "Юный техник" и т.п..
 <br>Я думаю, что вы не напрасно потратили свои усилия и эта статья сможет помочь вам сделать починку складного зонта.
 <!-- Код после текста --></p>
+
+</br>
+
+<a href="https://github.com/rollisa/ccssc">https://github.com/rollisa/ccssc</a></br>
+<a href="https://github.com/rollisa/css">https://github.com/rollisa/css</a></br>
+<a href="https://github.com/rollisa/css-html">https://github.com/rollisa/css-html</a></br>
+<a href="https://github.com/rollisa/phps">https://github.com/rollisa/phps</a></br>
+<a href="https://github.com/rollisa/respo">https://github.com/rollisa/respo</a></br>
+<a href="https://github.com/rollisa/css5">https://github.com/rollisa/css5</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
